# uncc_rgbd_odom_test

./: .gitmodules  CMakeLists.txt  README.md
src/: test.cpp
